<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Permission Viewer</string>
	<string name="title_app_info">App Detail</string>
	<string name="title_permission_info">Permission Detail</string>
	<string name="title_settings">Settings</string>
	<string name="title_applications">Applications</string>
	<string name="title_permissions">Permissions</string>
	<string name="action_settings">Settings</string>
	<string name="action_app_settings">App Settings</string>
	<string name="empty_list">No items</string>
	<string name="loading">Loading&#8230;</string>
	<string name="error_loading_app_list">Error loading the application list (%1$s)</string>
	<string name="error_loading_permission_list">Error loading the permissions list (%1$s)</string>
	<string name="error_launching_app_settings">Failed to launch the app settings activity</string>
	<string name="permission_count">Permissions: %1$s</string>
	<string name="application_count">Applications: %1$s</string>
	<string name="pref_show_system_title">Show system apps</string>
	<string name="pref_show_system_summaryOn">Showing system apps</string>
	<string name="pref_show_system_summaryOff">Hiding system apps</string>
	<string name="pref_show_disabled_apps_title">Show disabled apps</string>
	<string name="pref_show_disabled_apps_summaryOn">Showing disabled apps</string>
	<string name="pref_show_disabled_apps_summaryOff">Hiding disabled apps</string>
	<string name="pref_app_sort_order_title">Application sort order</string>
	<string name="pref_app_sort_order_summaryOn">Sorting applications by name</string>
	<string name="pref_app_sort_order_summaryOff">Sorting applications by permission count</string>
	<string name="pref_perm_sort_order_title">Permissions sort order</string>
	<string name="pref_perm_sort_order_summaryOn">Sorting permissions by name</string>
	<string name="pref_perm_sort_order_summaryOff">Sorting permissions by application count</string>
	<string name="permission_unknown">No description</string>
	<string name="permission_ACCESS_CHECKIN_PROPERTIES" tools:ignore="UnusedResources">Allows read/write access to the "properties" table in the checkin database, to change values that get uploaded.</string>
	<string name="permission_ACCESS_COARSE_LOCATION" tools:ignore="UnusedResources">Allows an app to access approximate location derived from network location sources such as cell towers and Wi-Fi.</string>
	<string name="permission_ACCESS_FINE_LOCATION" tools:ignore="UnusedResources">Allows an app to access precise location from location sources such as GPS, cell towers, and Wi-Fi.</string>
	<string name="permission_ACCESS_LOCATION_EXTRA_COMMANDS" tools:ignore="UnusedResources">Allows an application to access extra location provider commands.</string>
	<string name="permission_ACCESS_MOCK_LOCATION" tools:ignore="UnusedResources">Allows an application to create mock location providers for testing.</string>
	<string name="permission_ACCESS_NETWORK_STATE" tools:ignore="UnusedResources">Allows applications to access information about networks.</string>
	<string name="permission_ACCESS_SURFACE_FLINGER" tools:ignore="UnusedResources">Allows an application to use SurfaceFlinger\'s low level features.</string>
	<string name="permission_ACCESS_WIFI_STATE" tools:ignore="UnusedResources">Allows applications to access information about Wi-Fi networks.</string>
	<string name="permission_ACCOUNT_MANAGER" tools:ignore="UnusedResources">Allows applications to call into AccountAuthenticators.</string>
	<string name="permission_ADD_VOICEMAIL" tools:ignore="UnusedResources">Allows an application to add voicemails into the system.</string>
	<string name="permission_AUTHENTICATE_ACCOUNTS" tools:ignore="UnusedResources">Allows applications to call into AccountAuthenticators.</string>
	<string name="permission_BATTERY_STATS" tools:ignore="UnusedResources">Allows an application to collect battery statistics.</string>
	<string name="permission_BIND_ACCESSIBILITY_SERVICE" tools:ignore="UnusedResources">Must be required by an AccessibilityService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_APPWIDGET" tools:ignore="UnusedResources">Allows an application to tell the AppWidget service which application can access AppWidget\'s data.</string>
	<string name="permission_BIND_DEVICE_ADMIN" tools:ignore="UnusedResources">Must be required by device administration receiver, to ensure that only the system can interact with it.</string>
	<string name="permission_BIND_DREAM_SERVICE" tools:ignore="UnusedResources">Must be required by an DreamService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_INPUT_METHOD" tools:ignore="UnusedResources">Must be required by an InputMethodService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_NFC_SERVICE" tools:ignore="UnusedResources">Must be required by a HostApduService or OffHostApduService to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_NOTIFICATION_LISTENER_SERVICE" tools:ignore="UnusedResources">Must be required by an NotificationListenerService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_PRINT_SERVICE" tools:ignore="UnusedResources">Must be required by a PrintService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_REMOTEVIEWS" tools:ignore="UnusedResources">Must be required by RemoteViewsService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_TEXT_SERVICE" tools:ignore="UnusedResources">Must be required by a TextService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_TV_INPUT" tools:ignore="UnusedResources">Must be required by a TvInputService to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_VOICE_INTERACTION" tools:ignore="UnusedResources">Must be required by a VoiceInteractionService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_VPN_SERVICE" tools:ignore="UnusedResources">Must be required by a VpnService, to ensure that only the system can bind to it.</string>
	<string name="permission_BIND_WALLPAPER" tools:ignore="UnusedResources">Must be required by WallpaperService, to ensure that only the system can bind to it.</string>
	<string name="permission_BLUETOOTH" tools:ignore="UnusedResources">Allows applications to connect to paired bluetooth devices.</string>
	<string name="permission_BLUETOOTH_ADMIN" tools:ignore="UnusedResources">Allows applications to discover and pair bluetooth devices.</string>
	<string name="permission_BLUETOOTH_PRIVILEGED" tools:ignore="UnusedResources">Allows applications to pair bluetooth devices without user interaction, and to allow or disallow phonebook access or message access.</string>
	<string name="permission_BODY_SENSORS" tools:ignore="UnusedResources">Allows an application to access data from sensors that the user uses to measure what is happening inside his/her body, such as heart rate.</string>
	<string name="permission_BRICK" tools:ignore="UnusedResources">Required to be able to disable the device (very dangerous!).</string>
	<string name="permission_BROADCAST_PACKAGE_REMOVED" tools:ignore="UnusedResources">Allows an application to broadcast a notification that an application package has been removed.</string>
	<string name="permission_BROADCAST_SMS" tools:ignore="UnusedResources">Allows an application to broadcast an SMS receipt notification.</string>
	<string name="permission_BROADCAST_STICKY" tools:ignore="UnusedResources">Allows an application to broadcast sticky intents.</string>
	<string name="permission_BROADCAST_WAP_PUSH" tools:ignore="UnusedResources">Allows an application to broadcast a WAP PUSH receipt notification.</string>
	<string name="permission_CALL_PHONE" tools:ignore="UnusedResources">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call being placed.</string>
	<string name="permission_CALL_PRIVILEGED" tools:ignore="UnusedResources">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed.</string>
	<string name="permission_CAMERA" tools:ignore="UnusedResources">Required to be able to access the camera device.</string>
	<string name="permission_CAPTURE_AUDIO_OUTPUT" tools:ignore="UnusedResources">Allows an application to capture audio output.</string>
	<string name="permission_CAPTURE_SECURE_VIDEO_OUTPUT" tools:ignore="UnusedResources">Allows an application to capture secure video output.</string>
	<string name="permission_CAPTURE_VIDEO_OUTPUT" tools:ignore="UnusedResources">Allows an application to capture video output.</string>
	<string name="permission_CHANGE_COMPONENT_ENABLED_STATE" tools:ignore="UnusedResources">Allows an application to change whether an application component (other than its own) is enabled or not.</string>
	<string name="permission_CHANGE_CONFIGURATION" tools:ignore="UnusedResources">Allows an application to modify the current configuration, such as locale.</string>
	<string name="permission_CHANGE_NETWORK_STATE" tools:ignore="UnusedResources">Allows applications to change network connectivity state</string>
	<string name="permission_CHANGE_WIFI_MULTICAST_STATE" tools:ignore="UnusedResources">Allows applications to enter Wi-Fi Multicast mode</string>
	<string name="permission_CHANGE_WIFI_STATE" tools:ignore="UnusedResources">Allows applications to change Wi-Fi connectivity state</string>
	<string name="permission_CLEAR_APP_CACHE" tools:ignore="UnusedResources">Allows an application to clear the caches of all installed applications on the device.</string>
	<string name="permission_CLEAR_APP_USER_DATA" tools:ignore="UnusedResources">Allows an application to clear user data.</string>
	<string name="permission_CONTROL_LOCATION_UPDATES" tools:ignore="UnusedResources">Allows enabling/disabling location update notifications from the radio.</string>
	<string name="permission_DELETE_CACHE_FILES" tools:ignore="UnusedResources">Allows an application to delete cache files.</string>
	<string name="permission_DELETE_PACKAGES" tools:ignore="UnusedResources">Allows an application to delete packages.</string>
	<string name="permission_DEVICE_POWER" tools:ignore="UnusedResources">Allows low-level access to power management.</string>
	<string name="permission_DIAGNOSTIC" tools:ignore="UnusedResources">Allows applications to RW to diagnostic resources.</string>
	<string name="permission_DISABLE_KEYGUARD" tools:ignore="UnusedResources">Allows applications to disable the keyguard.</string>
	<string name="permission_DUMP" tools:ignore="UnusedResources">Allows an application to retrieve state dump information from system services.</string>
	<string name="permission_EXPAND_STATUS_BAR" tools:ignore="UnusedResources">Allows an application to expand or collapse the status bar.</string>
	<string name="permission_FACTORY_TEST" tools:ignore="UnusedResources">Run as a manufacturer test application, running as the root user.</string>
	<string name="permission_FLASHLIGHT" tools:ignore="UnusedResources">Allows access to the flashlight.</string>
	<string name="permission_FORCE_BACK" tools:ignore="UnusedResources">Allows an application to force a BACK operation on whatever is the top activity.</string>
	<string name="permission_GET_ACCOUNTS" tools:ignore="UnusedResources">Allows access to the list of accounts in the Accounts Service.</string>
	<string name="permission_GET_PACKAGE_SIZE" tools:ignore="UnusedResources">Allows an application to find out the space used by any package.</string>
</resources>